[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2",  "numpy==1.26.4"]
build-backend = "setuptools.build_meta"

[project]
name = "franky-sim"
description = "Drop-in Franka robot simulator implementing the libfranka network protocol."
requires-python = ">=3.9"
dynamic = ["version"]  # Use dynamic versioning from git tags
dependencies = [
    "numpy",
    "mujoco",
    "pin"
]
readme = "README.md"
authors = [
    {name = "Tim Schneider", email = "tim@robot-learning.de"},
    {name = "Baris Yazici", email = "barisyazici@alumni.sabanciuniv.edu"},
]
license = "Apache-2.0"
keywords = ["robotics", "franky", "robotics-simulation", "franka", "franka-research3", "genesis", "mujoco"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Homepage" = "https://github.com/TimSchneider42/franky-sim"
"Bug Tracker" = "https://github.com/TimSchneider42/franky-sim/issues"
"Documentation" = "https://github.com/TimSchneider42/franky-sim#readme"

[project.scripts]
franky-sim = "franky_sim.run_server:main"

[project.optional-dependencies]
genesis = [
    "genesis-world",
]
dev = [
    "pre-commit>=3.5.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["franky_sim"]

[tool.setuptools.package-data]
"franky_sim" = ["assets/*.urdf", "assets/meshes/**/*", "assets/NOTICE"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=franky_sim --cov-report=term-missing"

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
